--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -36,7 +36,7 @@
   /*
     Home Icon Image
   */
-  --home-icon-image: url(https://imgur.com/a/q5jr71M);
+  --home-icon-image: url(https://i.imgur.com/1vBCwAV.png);
 
   /*
     Change your friends icon image position
