--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://imgur.com/kUGY8DO);
+  --theme-background-image: url(https://i.imgur.com/kUGY8DO.png);
 
   /*
     Main Theme Color
@@ -36,7 +36,7 @@
   /*
     Home Icon Image
   */
-  --home-icon-image: url(https://imgur.com/1vBCwAV);
+  --home-icon-image: url(https://i.imgur.com/1vBCwAV.png);
 
   /*
     Change your friends icon image position
